--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*"
+        "php": ">=5.5.0",
+        "yiisoft/yii2": "~2.0.14"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
