--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "yiisoft/yii2": "~2.0.14"
+        "yiisoft/yii2": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
