--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "yiisoft/yii2": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "~4.4"
     },
     "autoload": {
       "psr-4": {
