--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,4 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-install:
-  - travis_retry composer self-update && composer --version
-  - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - travis_retry composer install --prefer-dist --no-interaction
-
-script:
-  - ./vendor/bin/phpunit
+install: composer install
